Fix spacing

--- a/css/main.scss
+++ b/css/main.scss
@@ -51,7 +51,7 @@
     line-height: 1em;
 }
 
-.sec1 #secondarysplit {
+.sec1 #textsplit {
     display: none;
 }
 
@@ -241,7 +241,7 @@ a:visited {
         font-size: 24px;
     }
 
-    .sec1 #secondarysplit {
+    .sec1 #textsplit {
         display: unset;
     }
     
